<?xml version="1.0" encoding="utf-8"?>
<resources>

    <bool name="isDebugEnabled">false</bool>

    <string name="server_url">https://survey-web-stgng.herokuapp.com</string>
    <string name="app_name">LumStic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_fetch">Fetch</string>
    <string name="action_about">About</string>
    <string name="select_one">Select one</string>
    <string name="action_logout">Logout</string>
    <string name="by_ashoka">By Ashoka</string>
    <string name="emailid">Email id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_message_one">There are no surveys</string>
    <string name="welcome_message_two">Please fetch surveys to use the application</string>
    <string name="upload_comleted_responses">Upload Completed Responses</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="forgot_password_message">Enter your email address registered with us</string>
    <string name="check_mail_message">Please check email address</string>
    <string name="request_password">REQUEST PASSWORD</string>
    <string name="title_activity_survey_details">SurveyDetailsActivity</string>
    <string name="survey_description">ncdjin cndij idcnjid cnjid cnji cnji cdnijn cnjidcndfj cnjdjicndijc icjndj</string>
    <string name="title_activity_complete_responses">CompleteResponsesActivity</string>
    <string name="title_activity_active_survey">ActiveSurveyActivity</string>
    <string name="title_activity_incomplete_response">IncompleteResponseActivity</string>
    <string name="title_activity_new_response">NewResponseActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_sample">Sample</string>

</resources>
