<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="lumstic.example.com.lumstic.UI.DashBoardActivity" >


    <item
        android:title="@string/action_help"

        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_ic_menu_overflow"
        android:showAsAction="always">
        <menu>

            <item
                android:id="@+id/action_help1"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/action_help">

        </item>
            <item android:id="@+id/action_fetch"
                android:title="@string/action_fetch"
                android:icon="@drawable/ic_menu_fetch"
                 />
            <item android:id="@+id/action_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/action_logout"
                />

</menu>
    </item>




</menu>
