<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dash_board_background"
    tools:context="lumstic.example.com.lumstic.UI.DashBoardActivity">
    <View
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:background="@drawable/dashboard_bg_img"></View>
    <View
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:background="@color/dash_board_foreground"></View>
    <ImageView
        android:id="@+id/vendor_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/splash_logo_temp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vendor_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/welcome_message_one"
        android:textColor="@color/text_color"
        android:textSize="18sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_centerHorizontal="true"
        android:padding="6dp"
        android:text="@string/welcome_message_two"
        android:textColor="@color/text_color"
        android:textSize="18sp" />
</RelativeLayout>