<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_gradient"
    tools:context="lumstic.example.com.lumstic.UI.LoginActivity">

    <View
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="240dp"
        android:background="@drawable/splash_bg_img"></View>

    <View
        android:id="@+id/solid_background"
        android:layout_width="fill_parent"
        android:layout_height="220dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:alpha=".9"
        android:background="@color/login_screen_background"></View>

    <View
        android:layout_width="fill_parent"
        android:layout_height="220dp"
        android:layout_below="@+id/solid_background"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:alpha=".9"
        android:background="@color/login_screen_background"></View>

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:background="@drawable/splash_logo" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_image"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/apptheme_edit_text_holo_light"
        android:hint="@string/emailid"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="devendra@userworkstech.com" />

    <RelativeLayout
        android:id="@+id/email_error_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_edit_text"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please check email id"
            android:textColor="@color/error_text_color"
            android:textSize="12sp" />

        <View
            android:layout_width="13dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_error"></View>
    </RelativeLayout>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_error_container"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/apptheme_edit_text_holo_light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="devendra@123#" />

    <RelativeLayout
        android:id="@+id/password_error_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit_text"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please check password "
            android:textColor="@color/error_text_color"
            android:textSize="12sp" />

        <View
            android:layout_width="13dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_error"></View>
    </RelativeLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_error_container"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textColor="#212121"
        android:textSize="16sp" />
</RelativeLayout>
